--- a/main.html
+++ b/main.html
@@ -8,19 +8,15 @@
 </head>
 <body>
   <section class="testimonials-container">
-    <h2>Testimonials</h2>
+    <h1>Testimonials</h1> <!-- changed from h2 to h1 -->
 
     <div class="testimonial">
-      <p class="text">
-        This product is amazing! I highly recommend it to anyone in need of a solution like this.
-      </p>
+      <p>This product is amazing! I highly recommend it to anyone in need of a solution like this.</p>
       <p class="author">- John Doe</p>
     </div>
 
     <div class="testimonial">
-      <p class="text">
-        I have been using this for a few weeks now and it has completely transformed my workflow.
-      </p>
+      <p>I have been using this for a few weeks now and it has completely transformed my workflow.</p>
       <p class="author">- Jane Smith</p>
     </div>
   </section>
