--- a/main.html
+++ b/main.html
@@ -7,8 +7,8 @@
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <section class="testimonials-container">
-    <h1>Testimonials</h1> <!-- changed from h2 to h1 -->
+  <div class="container">
+    <h1>Testimonials</h1>
 
     <div class="testimonial">
       <p>This product is amazing! I highly recommend it to anyone in need of a solution like this.</p>
@@ -19,6 +19,6 @@
       <p>I have been using this for a few weeks now and it has completely transformed my workflow.</p>
       <p class="author">- Jane Smith</p>
     </div>
-  </section>
+  </div>
 </body>
 </html>
